Fixed vertical scrolling on smaller screen. Started working on tests to be sure that the timer works

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 .container {
   background-image: url(./images/testWallpaper.jpg);
-  position: fixed;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
   z-index: 10;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .timerContainer {
-  display: flex;
   justify-content: center;
   min-width: 550px;
   max-width: 90%;
