--- a/src/components/FlexiblePaperCard.css
+++ b/src/components/FlexiblePaperCard.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   padding: 10px;
   width: 95%;
-  margin-top: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .title {
